--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
           <h2>HAPPY</h2>
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h4>| FROM DESPICABLE ME...</h4>
 
         </div>
       </div>
 
       <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <H3| FROM DESPICABLE ME...' Header -->
 
         <!-- Level 1 'HAPPY' Header -->
 
